adding the crud logic